<resources>
    <string name="app_name">My Application</string>


    <array name="name">
        <item>Bulbasaur</item>
        <item>Ivysaur</item>
        <item>Venusaur</item>
        <item>Charmander</item>
        <item>Charmeleon</item>
        <item>Charizard</item>
        <item>Squirtle</item>
        <item>Wartortle</item>
        <item>Blastoise</item>
        <item>Caterpie</item>
    </array>

    <array name="number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </array>
    <string name="title_activity_fav">favActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sort_alphabetically">Sort Alphabetically</string>
    <string name="sort_by_number">Sort by Number</string>
    <string name="search">Search</string>
    <string name="sort_by_stat">Sort by Stat</string>
    <string name="sort_by_total">Sort by Total</string>
    <string name="sort_by_speed">Sort by Speed</string>
    <string name="sort_by_defense">Sort by Defense</string>
    <string name="sort_by_attack">Sort by Attack</string>
    <string name="sort_by_hp">Sort by HP</string>
    <string name="invert_list">Invert List</string>
    <string name="jump_to_top">Jump to Top</string>
    <string name="Error">CONNECTION ERROR: Try again</string>
    <string name="Success">Success!</string>
</resources>